# console-hospital-manager

./: CMakeLists.txt  DB.txt  README.md  Spital.txt  activitate.h  activitateOperatie.cpp  activitatePrimire.cpp  globale.cpp  globale.h  lista.cpp  lista.h  meniu.cpp  meniu.h  operatiiSimple.h  operatiiSimpleOperatie.cpp  operatiiSimplePersoane.cpp  operatiiSimplePrimire.cpp  persoana.cpp  persoana.h  persoanaAsistent.cpp  persoanaDoctor.cpp  persoanaFisier.cpp  persoanaInternat.cpp  persoanaMonitorizat.cpp  spitalMain.cpp
.github/workflows/: cd.yml  ci.yml
include/: actions.h  appointment.h  global.h  list.h  menu.h  person.h  surgery.h
src/: appointment.cpp  appointmentActions.cpp  doctor.cpp  fileIO.cpp  global.cpp  inpatient.cpp  list.cpp  main.cpp  menu.cpp  nurse.cpp  outpatient.cpp  person.cpp  personActions.cpp  surgery.cpp  surgeryActions.cpp
